Training docs/Assignment8/Trial/src/objects/Leaves__c.object
<CustomObject>
	<description>This is a object Of leaves.</description>
	<fields>
		<fullName>Contact_Lookup__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>This is a Lookup for Contact.</description>
		<inlineHelpText>Please Select The Contact.</inlineHelpText>
		<label>Contact Lookup</label>
		<referenceTo>Contact</referenceTo>
		<relationshipLabel>Leaves</relationshipLabel>
		<relationshipName>Leaves</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>End_Date__c</fullName>
		<description>This is a Date Field For End Date of Leave.</description>
		<inlineHelpText>Please Enter the End Date Of The Leave.</inlineHelpText>
		<label>End Date</label>
		<required>true</required>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Start_Date__c</fullName>
		<description>This is a Start Date for leave.</description>
		<inlineHelpText>Please Enter The Start Date of leave.</inlineHelpText>
		<label>Start Date</label>
		<required>true</required>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Subject__c</fullName>
		<description>This is a Subject For the Leave.</description>
		<inlineHelpText>Please Enter the Subject For the Leave.</inlineHelpText>
		<label>Subject</label>
		<length>20</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<label>Leave</label>
	<nameField>
		<label>Leaves Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Leaves</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>